# mcp-boilerplate

./: .gitignore  README.md  mcp_settings.template.json  pyproject.toml  start-sse.example.ps1  start-sse.example.sh  test_server.py
app/: __init__.py  client.py  config.py  server.py
examples/: 项目初始化.md
