[project]
name = "mcp-boilerplate"
version = "0.1.0"
description = "MCP-based Service Implemantaion Boilerplate"
authors = [
    { name = "Scofield Guo", email = "guoz5658@outlook.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "fastmcp",
    "mcp",
    "uvicorn",
    "requests",
    "python-dotenv",
    "click"
]

[project.scripts]
mcp-boilerplate = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
